# model-training

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  dvc.yaml  pylintrc  pyproject.toml  pytest.ini
.dvc/: config
.github/workflows/: CI.yml
reports/results/: results.txt
src/: __init__.py  model_definition.py  params.yaml  predict.py  preprocess.py  run.py  train.py  utility_functions.py  utils.py
tests/: test_data_quality.py  test_integration.py  test_model_definition.py  test_model_development.py  test_monitoring.py  test_params.yaml  test_preprocess.py  test_train.py  test_unit.py
tests/testdata/model/: tokenizer.pkl
tests/testdata/preprocess/: README.md  X_test.npy  X_train.npy  X_val.npy  char_index.json  y_test.npy  y_train.npy  y_val.npy
tests/testdata/raw/: README.md  test.txt  train.txt  val.txt
