[tool.poetry]
name = "phishing-detection"
version = "0.1.0"
description = ""
authors = ["Jan <j2000.vdm@gmail.com>", "Shayan Ramezani <s.ramezani@student.tudelft.nl>", "Remi Lejeune <R.J.Lejeune@student.tudelft.nl", "Michael Chan <J.M.Chan@student.tudelft.nl>"]
readme = "README.md"
packages = [{ include = "src" }] 

[tool.poetry.dependencies]
python = "~3.11"
tensorflow-io-gcs-filesystem = [
    {platform = "darwin", version = "~0.36.0"},
    {platform = "linux", version = "~0.31.0"},
    {platform = "win32", version = "~0.31.0"},
]
tensorflow = {version = "~2.16.1" }
tensorflow-intel = { version = "~2.16.1", platform = "win32" }
keras = "3.3.3"
matplotlib = "3.8.4"
scikit-learn = "1.2.2"
numpy = "1.26.4"
pandas = "2.2.2"
seaborn ="0.13.2"
jupyter = "1.0.0"
pylint = "3.1.0"
bandit = "1.7.8"
dvc = "3.50.1"
dvc-s3 = "3.2.0"
dvc-gdrive = "3.0.1"
gto = "^1.7.1"
lib-ml-REMLA10-2024 = "^1.0.0"
pytest = "^8.2.1"
utils = "^1.0.2"
pytest-cov = "^5.0.0"
psutil = "5.9.8"
black = "24.4.2"
mypy = "1.10.0"
pre-commit = "3.7.1"
isort = "5.13.2"
boto3 = "^1.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = "src/*.py"
extend-exclude = '''
/(
    tests
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["^tests/"]
files = ["src"]
mypy_path = ["src"]

# Specify modules with separate configurations
[[tool.mypy.overrides]]
module = [
    "keras.*",
    "sklearn.*",
    "seaborn.*",
    "lib_ml_remla",
    "boto3.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B106"]
targets = ["src"]
